# imaginando-products

./: CMakeLists.txt  DownloadButton.qml  DownloadingOverlay.qml  Downloads.json  Images.qrc  LICENSE  Login.qml  Main.qml  ModuleCard.qml  ProductCard.qml  Settings.qml  SidebarItem.qml  Styles.qml  controller.cpp  controller.h  frame.ui  icon.rc  main.cpp  modules.cpp  modules.h  object.cpp  object.h  product.cpp  product.h
untitled/: CMakeLists.txt  Main.qml  main.cpp  object.cpp  object.h
